fixed issue with select display getting cut off

--- a/src/Tools/Transaction-Calculator/transactionCalculator.css
+++ b/src/Tools/Transaction-Calculator/transactionCalculator.css
@@ -117,7 +117,7 @@
 
 .transaction-table-row select {
     width: 100%;
-    padding: 8px;
+    padding: 4px 8px;
     border: 1px solid #ced4da;
     border-radius: 4px;
     text-align: center;
